--- a/seleniumdemo/pom.xml
+++ b/seleniumdemo/pom.xml
@@ -12,6 +12,12 @@
     <groupId>com.zdltech.demo</groupId>
     <artifactId>seleniumdemo</artifactId>
     <version>1.0-SNAPSHOT</version>
-
+    <dependencies>
+        <dependency>
+            <groupId>net.lightbody.bmp</groupId>
+            <artifactId>browsermob-core</artifactId>
+            <version>2.1.5</version>
+        </dependency>
+    </dependencies>
 
 </project>
